--- a/example.html
+++ b/example.html
@@ -228,7 +228,7 @@ document.addEventListener("alpine:init", () => {
             return this.show === true
         },
         
-        // Initilizing component 
+        // Initializing component 
         init() {
             const options = document.getElementById(this.elementId).options;
             for (let i = 0; i < options.length; i++) {
